--- a/src/Components/ReusableComponents/ContactForm.scss
+++ b/src/Components/ReusableComponents/ContactForm.scss
@@ -1,7 +1,7 @@
 .contact-form {
   background-color: var(--bg-light);
-  width: 118em;
-  padding: 7.2em;
+  width: 118rem;
+  padding: 7.2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -53,18 +53,18 @@ textarea {
 .message-textbox {
   display: flex;
   flex-direction: column;
-  gap: 1.6em;
+  gap: 1.6rem;
 }
 
 .name-textbox,
 .email-textbox {
-  margin-bottom: 5.6em;
+  margin-bottom: 5.6rem;
 }
 
 form {
   display: flex;
-  gap: 10.4em;
-  margin-top: 8em;
+  gap: 10.4rem;
+  margin-top: 8rem;
 }
 
 .right-side {
@@ -75,7 +75,7 @@ form {
 
 .left-side,
 .right-side {
-  width: 46.5em;
+  width: 46.5rem;
 }
 
 .contact-form h4,
@@ -86,5 +86,27 @@ form {
 .form-title {
   display: flex;
   flex-direction: column;
-  gap: 1.6em;
+  gap: 1.6rem;
+}
+
+/* Media Queries */
+
+@media only screen and (max-width: 499px) {
+  .contact-form {
+    width: 105rem;
+  }
+
+  form {
+    flex-direction: column;
+    gap: 5.6rem;
+  }
+
+  .left-side,
+  .right-side {
+    width: 90.5rem;
+  }
+
+  .submit-btn {
+    margin-top: 6.6rem;
+  }
 }
