--- a/src/Views/ArtPage/ArtPage.scss
+++ b/src/Views/ArtPage/ArtPage.scss
@@ -1,7 +1,3 @@
-// .artPage {
-
-// }
-
 .art-container {
   padding: 10.4rem 3.3rem;
   display: flex;
@@ -57,4 +53,19 @@
   border: 2px solid var(--cyan);
   width: 55rem;
   height: 60rem;
+}
+
+/* Media Queries */
+
+@media only screen and (max-width: 450px) {
+  .art-container .art-pic {
+    width: 48rem;
+    height: 54rem;
+  }
+}
+
+@media only screen and (max-width: 599px) {
+  .art-gallery {
+    max-width: 47.2rem;
+  }
 }
