--- a/src/Components/ReusableComponents/Gallery.scss
+++ b/src/Components/ReusableComponents/Gallery.scss
@@ -119,6 +119,15 @@
         width: 79rem !important;
         grid-area: 5 / 2 / 6 / 4;
       }
+
+      .safari_only {
+        .gallery-container {
+          img {
+            height: 14rem;
+            width: 15rem;
+          }
+        }
+      }
     }
   }
 }
