Testing out the styling on the makeup page for cross-broswer compatibility

--- a/src/Components/ReusableComponents/Gallery.scss
+++ b/src/Components/ReusableComponents/Gallery.scss
@@ -92,24 +92,24 @@
   .sfx-container {
     .gallery-container {
       img {
-        height: 32rem;
-        width: 180px;
+        height: 128px;
+        width: 155px;
       }
 
       :nth-child(3) {
-        height: 67rem !important;
+        height: 268px !important;
       }
 
       :nth-child(5) {
-        width: 282px !important;
+        width: 319px !important;
       }
 
       :nth-child(11) {
-        height: 67rem !important;
+        height: 268px !important;
       }
 
       :nth-child(16) {
-        width: 282px !important;
+        width: 319px !important;
       }
     }
   }
