Testing styling for cross-browser compatibility

--- a/src/Components/ReusableComponents/Gallery.scss
+++ b/src/Components/ReusableComponents/Gallery.scss
@@ -95,7 +95,7 @@
         min-height: 128px;
         max-height: 140px;
         min-width: 155px;
-        max-height: 175px;
+        max-width: 175px;
       }
 
       :nth-child(3) {
