--- a/src/Components/ReusableComponents/Gallery.scss
+++ b/src/Components/ReusableComponents/Gallery.scss
@@ -49,31 +49,65 @@
   }
 }
 
+@media only screen and (min-width: 300px) and (max-width: 399px) {
+  img {
+    height: 33rem;
+    width: 34rem;
+  }
+
+  :nth-child(3) {
+    height: 68rem !important;
+  }
+
+  :nth-child(5) {
+    width: 70rem !important;
+  }
+
+  :nth-child(11) {
+    height: 68rem !important;
+  }
+
+  :nth-child(16) {
+    width: 70rem !important;
+  }
+}
+
 @media only screen and (min-width: 300px) and (max-width: 499px) {
-  .gallery-container {
-    grid-template-columns: 1fr 1fr;
+  :nth-child(3) {
+    grid-area: 4 / 1 / 6 / 2;
+  }
 
-    img {
-      height: 33rem;
-      width: 34rem;
-    }
+  :nth-child(16) {
+    grid-area: 9 / 1 / 10 / 3;
+  }
+}
 
-    :nth-child(3) {
-      height: 68rem !important;
-      grid-area: 4 / 1 / 6 / 2;
-    }
+@media only screen and (min-width: 400px) and (max-width: 499px) {
+  .makeup-container,
+  .sfx-container {
+    .gallery-container {
+      img {
+        min-height: 90px;
+        max-height: 92px;
+        min-width: 85px;
+        max-width: 103px;
+      }
 
-    :nth-child(5) {
-      width: 70rem !important;
-    }
+      :nth-child(3) {
+        min-height: 193px !important;
+      }
 
-    :nth-child(11) {
-      height: 68rem !important;
-    }
+      :nth-child(5) {
+        min-width: 215px !important;
+      }
 
-    :nth-child(16) {
-      width: 70rem !important;
-      grid-area: 9 / 1 / 10 / 3;
+      :nth-child(11) {
+        min-height: 193px !important;
+      }
+
+      :nth-child(16) {
+        min-width: 215px !important;
+      }
     }
   }
 }
@@ -92,30 +126,20 @@
   .sfx-container {
     .gallery-container {
       img {
-        min-height: 128px;
-        max-height: 140px;
-        min-width: 155px;
-        max-width: 175px;
+        max-height: 130px;
+        max-width: 140px;
       }
 
       :nth-child(3) {
-        min-height: 268px !important;
-        max-height: 304px !important;
+        max-height: 285px !important;
       }
 
       :nth-child(5) {
-        min-width: 319px !important;
-        max-width: 374px !important;
+        max-width: 302px !important;
       }
 
       :nth-child(11) {
-        min-height: 268px !important;
-        max-height: 304px !important;
-      }
-
-      :nth-child(16) {
-        min-width: 319px !important;
-        max-width: 374px !important;
+        max-height: 285px !important;
       }
     }
   }
@@ -132,11 +156,19 @@
       grid-template-rows: repeat(6, 1fr);
 
       :nth-child(3) {
-        grid-area: 4 / 1 / 6 / 2;
+        grid-area: 1 / 3 / 3 / 4;
+      }
+
+      :nth-child(5) {
+        grid-area: 3 / 1 / 4 / 3;
+      }
+
+      :nth-child(11) {
+        grid-area: 5 / 2 / 7 / 3;
       }
 
       :nth-child(16) {
-        grid-area: 5 / 2 / 6 / 4;
+        display: none;
       }
     }
   }
