--- a/src/Components/ReusableComponents/Gallery.scss
+++ b/src/Components/ReusableComponents/Gallery.scss
@@ -87,36 +87,54 @@
   .sfx-container {
     .gallery-container {
       img {
-        min-height: 90px;
-        max-height: 92px;
-        min-width: 85px;
-        max-width: 103px;
+        max-height: 145px;
+        max-width: 175px;
       }
 
       :nth-child(3) {
-        min-height: 193px !important;
+        max-height: 308px !important;
       }
 
       :nth-child(5) {
-        min-width: 215px !important;
+        max-width: 372px !important;
       }
 
       :nth-child(11) {
-        min-height: 193px !important;
+        max-height: 308px !important;
       }
 
       :nth-child(16) {
-        min-width: 215px !important;
+        max-width: 372px !important;
       }
     }
   }
 }
 
 @media only screen and (max-width: 499px) {
+  .gallery-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
   .makeup-container,
   .sfx-container {
     .gallery-container {
-      grid-template-rows: repeat(7, 1fr);
+      grid-template-rows: repeat(10, 1fr);
+
+      :nth-child(3) {
+        grid-area: 2 / 1 / 4 / 2;
+      }
+
+      :nth-child(5) {
+        grid-area: 5 / 1 / 6 / 3;
+      }
+
+      :nth-child(11) {
+        grid-area: 7 / 2 / 9 / 3;
+      }
+
+      :nth-child(16) {
+        grid-area: 10 / 1 / 11 / 3;
+      }
     }
   }
 }
