--- a/src/Components/ReusableComponents/Gallery.scss
+++ b/src/Components/ReusableComponents/Gallery.scss
@@ -50,35 +50,30 @@
 }
 
 @media only screen and (min-width: 300px) and (max-width: 399px) {
-  img {
-    height: 33rem;
-    width: 34rem;
-  }
+  .makeup-container,
+  .sfx-container {
+    .gallery-container {
+      img {
+        max-height: 130px;
+        max-width: 132px;
+      }
 
-  :nth-child(3) {
-    height: 68rem !important;
-  }
+      :nth-child(3) {
+        max-height: 281px !important;
+      }
 
-  :nth-child(5) {
-    width: 70rem !important;
-  }
+      :nth-child(5) {
+        max-width: 295px !important;
+      }
 
-  :nth-child(11) {
-    height: 68rem !important;
-  }
+      :nth-child(11) {
+        max-height: 281px !important;
+      }
 
-  :nth-child(16) {
-    width: 70rem !important;
-  }
-}
-
-@media only screen and (min-width: 300px) and (max-width: 499px) {
-  :nth-child(3) {
-    grid-area: 4 / 1 / 6 / 2;
-  }
-
-  :nth-child(16) {
-    grid-area: 9 / 1 / 10 / 3;
+      :nth-child(16) {
+        max-width: 295px !important;
+      }
+    }
   }
 }
 
