Updated the gallery layout for the makeup and sfx pages
Fixed layout and styling issues for viewport widths below 499px

--- a/src/Views/MakeupPage/MakeupPage.scss
+++ b/src/Views/MakeupPage/MakeupPage.scss
@@ -18,6 +18,14 @@
   img:nth-child(16) {
     object-position: center -2rem;
   }
+
+  @media only screen and (max-width: 499px) {
+    .gallery-container {
+      :nth-child(16) {
+        object-position: center;
+      }
+    }
+  }
 }
 
 .makeup-container img {
