--- a/src/Components/ReusableComponents/Gallery.scss
+++ b/src/Components/ReusableComponents/Gallery.scss
@@ -3,6 +3,11 @@
   place-items: center;
   gap: 2.4rem;
   margin-top: 10.4rem;
+
+  img {
+    object-fit: cover;
+    border: 2px solid;
+  }
 }
 
 @media only screen and (max-width: 299px) {
@@ -15,17 +20,8 @@
       justify-content: center;
 
       img {
-        max-width: 230px;
-        max-height: 180px;
-      }
-
-      :nth-child(5) {
-        width: 230px !important;
-      }
-
-      :nth-child(16) {
-        width: 230px !important;
-        object-position: center;
+        width: 230px;
+        height: 180px;
       }
     }
   }
@@ -36,58 +32,30 @@
   .sfx-container {
     .gallery-container {
       img {
-        max-height: 120px;
-        max-width: 125px;
+        height: 120px;
+        width: 125px;
       }
 
       :nth-child(3) {
-        max-height: 270px !important;
+        height: 261px !important;
       }
 
       :nth-child(5) {
-        max-width: 283px !important;
+        width: 273px !important;
       }
 
       :nth-child(11) {
-        max-height: 270px !important;
+        height: 261px !important;
       }
 
       :nth-child(16) {
-        max-width: 283px !important;
+        width: 273px !important;
       }
     }
   }
 }
 
-@media only screen and (min-width: 400px) and (max-width: 499px) {
-  .makeup-container,
-  .sfx-container {
-    .gallery-container {
-      img {
-        max-height: 145px;
-        max-width: 175px;
-      }
-
-      :nth-child(3) {
-        max-height: 308px !important;
-      }
-
-      :nth-child(5) {
-        max-width: 372px !important;
-      }
-
-      :nth-child(11) {
-        max-height: 308px !important;
-      }
-
-      :nth-child(16) {
-        max-width: 372px !important;
-      }
-    }
-  }
-}
-
-@media only screen and (max-width: 499px) {
+@media only screen and (min-width: 300px) and (max-width: 499px) {
   .gallery-container {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -111,6 +79,34 @@
 
       :nth-child(16) {
         grid-area: 10 / 1 / 11 / 3;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 400px) and (max-width: 499px) {
+  .makeup-container,
+  .sfx-container {
+    .gallery-container {
+      img {
+        height: 145px;
+        width: 175px;
+      }
+
+      :nth-child(3) {
+        height: 310px !important;
+      }
+
+      :nth-child(5) {
+        width: 370px !important;
+      }
+
+      :nth-child(11) {
+        height: 310px !important;
+      }
+
+      :nth-child(16) {
+        width: 370px !important;
       }
     }
   }
@@ -230,9 +226,6 @@
     img {
       width: 28rem;
       height: 25rem;
-      object-fit: cover;
-      border-width: 2px;
-      border-style: solid;
     }
 
     :nth-child(3) {
