--- a/src/Views/ArtPage/ArtPage.scss
+++ b/src/Views/ArtPage/ArtPage.scss
@@ -4,41 +4,16 @@
   flex-direction: column;
   align-items: center;
 
+  .art-container {
+    padding: 0 10.4rem;
+  }
+
   h4:not(.contact-form .section-title) {
-    color: var(--bg-lightest);
-    font-size: 2.8rem;
-    line-height: 5.5rem;
-    margin: 20.8rem 0 3.2rem 0;
-    text-transform: uppercase;
-  }
-
-  .headline {
-    font-size: 4.8rem;
-    line-height: 6rem;
-    margin-bottom: 1.6rem;
+    margin-top: 20.8rem;
   }
 
   h3 {
-    font-size: 3.3rem;
     margin-bottom: 10.4rem;
-    text-transform: none;
-    font-weight: 400;
-  }
-
-  h4,
-  .headline {
-    font-weight: 700;
-  }
-
-  .headline,
-  h3 {
-    color: var(--white);
-  }
-
-  h4,
-  h3,
-  .headline {
-    text-align: left;
   }
 
   .art-gallery {
@@ -46,26 +21,34 @@
     grid-template-columns: 1fr 1fr;
     gap: 8rem;
     margin-bottom: 24.7rem;
-  }
 
-  .art-pic {
-    border: 2px solid var(--cyan);
-    width: 55rem;
-    height: 60rem;
+    img {
+      border: 2px solid var(--cyan);
+      width: 55rem;
+      height: 60rem;
+    }
   }
 }
 
 /* Media Queries */
 
 @media only screen and (max-width: 450px) {
-  .artPage .art-pic {
-    width: 48rem;
-    height: 54rem;
+  .artPage {
+    .art-pic {
+      width: 48rem;
+      height: 54rem;
+    }
   }
 }
 
 @media only screen and (max-width: 599px) {
-  .art-gallery {
-    max-width: 47.2rem;
+  .artPage {
+    .art-gallery {
+      grid-template-columns: 180px 180px;
+      img {
+        height: 200px;
+        width: 180px;
+      }
+    }
   }
 }
