--- a/src/Views/ArtPage/ArtPage.scss
+++ b/src/Views/ArtPage/ArtPage.scss
@@ -32,7 +32,39 @@
 
 /* Media Queries */
 
-@media only screen and (max-width: 449px) {
+@media only screen and (max-width: 349px) {
+  .artPage {
+    .art-gallery {
+      grid-template-columns: 120px 120px;
+      img {
+        height: 140px;
+        width: 120px;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 350px) and (max-width: 399px) {
+  .artPage {
+    .art-gallery {
+      grid-template-columns: 140px 140px;
+      img {
+        height: 160px;
+        width: 140px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 399px) {
+  .artPage {
+    .art-gallery {
+      gap: 4.8rem;
+    }
+  }
+}
+
+@media only screen and (min-width: 400px) and (max-width: 449px) {
   .artPage {
     .art-gallery {
       grid-template-columns: 160px 160px;
