--- a/src/Views/ArtPage/ArtPage.scss
+++ b/src/Views/ArtPage/ArtPage.scss
@@ -32,7 +32,21 @@
 
 /* Media Queries */
 
-@media only screen and (max-width: 349px) {
+@media only screen and (max-width: 299px) {
+  .artPage {
+    .art-gallery {
+      grid-template-columns: 100px 100px;
+      gap: 2.4rem;
+
+      img {
+        height: 120px;
+        width: 100px;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 300px) and (max-width: 349px) {
   .artPage {
     .art-gallery {
       grid-template-columns: 120px 120px;
@@ -40,6 +54,14 @@
         height: 140px;
         width: 120px;
       }
+    }
+  }
+}
+
+@media only screen and (min-width: 300px) and (max-width: 399px) {
+  .artPage {
+    .art-gallery {
+      gap: 4.8rem;
     }
   }
 }
@@ -52,14 +74,6 @@
         height: 160px;
         width: 140px;
       }
-    }
-  }
-}
-
-@media only screen and (max-width: 399px) {
-  .artPage {
-    .art-gallery {
-      gap: 4.8rem;
     }
   }
 }
