Fixed the broken grid layout on the bridal page
For 300px-399px screen widths

--- a/src/Views/BridalPage/BridalPage.scss
+++ b/src/Views/BridalPage/BridalPage.scss
@@ -24,3 +24,9 @@
     object-position: center top;
   }
 }
+
+@media only screen and (min-width: 300px) and (max-width: 399px) {
+  .bridal-container {
+    padding: 24.7rem 16rem 0;
+  }
+}
