--- a/src/Components/ReusableComponents/PageHeading.css
+++ b/src/Components/ReusableComponents/PageHeading.css
@@ -27,8 +27,8 @@
 
 /* Media Queries */
 
-@media only screen and (max-width: 299px) {
+/* @media only screen and (max-width: 299px) {
   .page-heading-container {
     padding: 0 19px;
   }
-}
+} */
