--- a/src/Views/ArtPage/ArtPage.scss
+++ b/src/Views/ArtPage/ArtPage.scss
@@ -90,3 +90,15 @@
     }
   }
 }
+
+@media only screen and (min-width: 600px) and (max-width: 699px) {
+  .artPage {
+    .art-gallery {
+      gap: 38px;
+      img {
+        width: 265px;
+        height: 289px;
+      }
+    }
+  }
+}
