--- a/src/Views/ArtPage/ArtPage.scss
+++ b/src/Views/ArtPage/ArtPage.scss
@@ -120,3 +120,14 @@
     }
   }
 }
+
+@media only screen and (min-width: 800px) and (max-width: 999px) {
+  .artPage {
+    .art-gallery {
+      img {
+        width: 352px;
+        height: 384px;
+      }
+    }
+  }
+}
