--- a/src/Views/ArtPage/ArtPage.scss
+++ b/src/Views/ArtPage/ArtPage.scss
@@ -131,3 +131,14 @@
     }
   }
 }
+
+@media only screen and (min-width: 1000px) and (max-width: 1099px) {
+  .artPage {
+    .art-gallery {
+      img {
+        width: 440px;
+        height: 480px;
+      }
+    }
+  }
+}
