--- a/src/Views/BridalPage/BridalPage.scss
+++ b/src/Views/BridalPage/BridalPage.scss
@@ -25,6 +25,14 @@
   }
 }
 
+/* Media Queries */
+
+@media only screen and (max-width: 299px) {
+  .bridal-container {
+    padding: 24.7rem 4.8rem 0;
+  }
+}
+
 @media only screen and (min-width: 300px) and (max-width: 399px) {
   .bridal-container {
     padding: 24.7rem 16rem 0;
