--- a/src/Views/MakeupPage/MakeupPage.scss
+++ b/src/Views/MakeupPage/MakeupPage.scss
@@ -22,12 +22,14 @@
   img:nth-child(16) {
     object-position: center -2rem;
   }
+}
 
-  @media only screen and (max-width: 499px) {
-    .gallery-container {
-      :nth-child(16) {
-        object-position: center;
-      }
+/* Media Queries */
+
+@media only screen and (max-width: 299px) {
+  .gallery-container {
+    img:nth-child(16) {
+      object-position: center;
     }
   }
 }
