Styled the header for 400-499px screen responsiveness

--- a/src/Views/BridalPage/BridalPage.scss
+++ b/src/Views/BridalPage/BridalPage.scss
@@ -38,3 +38,9 @@
     padding: 24.7rem 16rem 0;
   }
 }
+
+@media only screen and (min-width: 400px) {
+  .bridal-container {
+    padding-top: 120px;
+  }
+}
