--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -19,6 +19,20 @@ header {
 
 /* Media Queries */
 
+@media only screen and (min-width: 400px) and (max-width: 499px) {
+  header {
+    .logo {
+      width: 75px;
+      height: 75px;
+    }
+
+    .menu-icon {
+      width: 20px;
+      height: 18px;
+    }
+  }
+}
+
 @media only screen and (max-width: 999px) {
   #standard {
     display: none;
