Styled the header for 300px-399px screen responsiveness

--- a/src/Views/BridalPage/BridalPage.scss
+++ b/src/Views/BridalPage/BridalPage.scss
@@ -35,7 +35,7 @@
 
 @media only screen and (min-width: 300px) and (max-width: 399px) {
   .bridal-container {
-    padding: 24.7rem 16rem 0;
+    padding: 120px 16rem 0;
   }
 }
 
