--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -19,9 +19,23 @@ header {
 
 /* Media Queries */
 
-@media only screen and (min-width: 400px) {
+@media only screen and (min-width: 300px) {
   header {
     padding: 0 24px 0 8px;
+  }
+}
+
+@media only screen and (min-width: 300px) and (max-width: 399px) {
+  header {
+    .logo {
+      width: 60px;
+      height: 60px;
+    }
+
+    .menu-icon {
+      width: 16px;
+      height: 14px;
+    }
   }
 }
 
