--- a/src/Views/BridalPage/BridalPage.scss
+++ b/src/Views/BridalPage/BridalPage.scss
@@ -29,7 +29,7 @@
 
 @media only screen and (max-width: 299px) {
   .bridal-container {
-    padding: 24.7rem 4.8rem 0;
+    padding: 120px 4.8rem 0;
   }
 }
 
