--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -67,6 +67,20 @@ header {
   }
 }
 
+@media only screen and (min-width: 700px) and (max-width: 899px) {
+  header {
+    .logo {
+      width: 94px;
+      height: 94px;
+    }
+
+    .menu-icon {
+      width: 22px;
+      height: 20px;
+    }
+  }
+}
+
 @media only screen and (max-width: 999px) {
   #standard {
     display: none;
