--- a/src/Components/Header/ResponsiveNav.scss
+++ b/src/Components/Header/ResponsiveNav.scss
@@ -37,22 +37,110 @@
     .close-btn {
       color: var(--white);
       z-index: 5;
-      width: 4rem;
-      height: 4rem;
-      transform: translateX(2.3rem);
+      width: 3rem;
+      height: 3rem;
+      transform: translateX(8px) translateY(-8px);
     }
   }
 }
 
 /* Media Queries */
 
-@media only screen and (max-width: 999px) {
+@media only screen and (min-width: 500px) {
+  .responsive-container {
+    #responsive {
+      padding: 48px 32px 0 60px;
+      height: 75vw;
+
+      ul {
+        gap: 24px;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 500px) and (max-width: 599px) {
+  .responsive-container {
+    #responsive {
+      height: 75vw;
+
+      ul {
+        h2,
+        .nav-link:link,
+        .nav-link:visited {
+          font-size: 16px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 500px) and (max-width: 699px) {
   .responsive-container {
     #responsive {
       .close-btn {
-        width: 3%;
-        height: 4%;
+        width: 18px;
+        height: 18px;
       }
+    }
+  }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 699px) {
+  .responsive-container {
+    #responsive {
+      height: 70vw;
+    }
+  }
+}
+
+@media only screen and (min-width: 700px) and (max-width: 799px) {
+  .responsive-container {
+    #responsive {
+      height: 65vw;
+
+      ul {
+        h2,
+        .nav-link:link,
+        .nav-link:visited {
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 700px) and (max-width: 899px) {
+  .responsive-container {
+    #responsive {
+      .close-btn {
+        width: 22px;
+        height: 20px;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 800px) and (max-width: 899px) {
+  .responsive-container {
+    #responsive {
+      height: 60vw;
+
+      ul {
+        h2,
+        .nav-link:link,
+        .nav-link:visited {
+          font-size: 22px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 900px) and (max-width: 999px) {
+  .responsive-container {
+    #responsive {
+      height: 58vw;
     }
   }
 }
