--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -85,7 +85,7 @@ footer {
 
 @media only screen and (max-width: 399px) {
   footer {
-    height: 200px;
+    height: 180px;
 
     .footer-logo {
       width: 96px;
@@ -106,7 +106,7 @@ footer {
 
 @media only screen and (min-width: 400px) and (max-width: 499px) {
   footer {
-    height: 220px;
+    height: 200px;
 
     .footer-logo {
       width: 108px;
@@ -127,7 +127,9 @@ footer {
 
 @media only screen and (max-width: 499px) {
   footer {
-    margin: 98px 0 26px;
+    margin: 98px 0;
+    display: flex;
+    justify-content: center;
     padding: 0;
 
     .cols {
