--- a/src/Components/ReusableComponents/PageHeading.css
+++ b/src/Components/ReusableComponents/PageHeading.css
@@ -27,8 +27,30 @@
 
 /* Media Queries */
 
-/* @media only screen and (max-width: 299px) {
-  .page-heading-container {
-    padding: 0 19px;
+@media only screen and (max-width: 299px) {
+  .section-title {
+    font-size: 2.3rem;
   }
-} */
+
+  .headline {
+    font-size: 3.2rem;
+  }
+
+  .subtitle {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (min-width: 300px) and (max-width: 399px) {
+  .section-title {
+    font-size: 11px;
+  }
+
+  .headline {
+    font-size: 4rem;
+  }
+
+  .subtitle {
+    font-size: 2.3rem;
+  }
+}
