--- a/src/Views/MakeupPage/MakeupPage.scss
+++ b/src/Views/MakeupPage/MakeupPage.scss
@@ -27,6 +27,10 @@
 /* Media Queries */
 
 @media only screen and (max-width: 299px) {
+  .makeup-container {
+    padding: 120px 4.8rem 0;
+  }
+
   .gallery-container {
     img:nth-child(16) {
       object-position: center;
