--- a/src/Views/SfxPage/SfxPage.scss
+++ b/src/Views/SfxPage/SfxPage.scss
@@ -5,7 +5,7 @@
 }
 
 .sfx-container {
-  padding-top: 24.7rem;
+  padding-top: 120px;
 
   img {
     border-color: var(--red);
@@ -28,6 +28,8 @@
 
 @media only screen and (max-width: 299px) {
   .sfx-container {
+    padding: 120px 4.8rem 0;
+
     img:nth-child(11),
     img:nth-child(13) {
       object-position: center top;
