--- a/src/Components/ReusableComponents/PositiveQuotes.scss
+++ b/src/Components/ReusableComponents/PositiveQuotes.scss
@@ -1,7 +1,3 @@
-// .positive-quotes-container {
-//   margin-bottom: -24rem;
-// }
-
 .positive-quotes-container {
   .quote-container {
     color: var(--bg-lightest);
@@ -24,5 +20,31 @@
     font-size: 2.4rem;
     line-height: 3.2rem;
     transition: opacity 1500ms ease-in-out;
+  }
+}
+
+/* Media Queries */
+
+@media only screen and (max-width: 299px) {
+  .positive-quotes-container {
+    .positive-quote {
+      font-size: 14px;
+    }
+  }
+}
+
+@media only screen and (min-width: 300px) and (max-width: 399px) {
+  .positive-quotes-container {
+    .positive-quote {
+      font-size: 16px;
+    }
+  }
+}
+
+@media only screen and (max-width: 499px) {
+  .positive-quotes-container {
+    .positive-quote {
+      line-height: 28px;
+    }
   }
 }
