--- a/src/Views/ArtPage/ArtPage.scss
+++ b/src/Views/ArtPage/ArtPage.scss
@@ -1,5 +1,5 @@
 .artPage {
-  padding: 10.4rem;
+  padding: 84px 40px 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,7 +36,7 @@
 
 @media only screen and (max-width: 299px) {
   .artPage {
-    padding: 10.4rem 8rem;
+    padding: 94px 32px 42px;
     .art-gallery {
       img {
         height: 240px;
