--- a/src/Components/ReusableComponents/PositiveQuotes.scss
+++ b/src/Components/ReusableComponents/PositiveQuotes.scss
@@ -41,10 +41,26 @@
   }
 }
 
-@media only screen and (max-width: 499px) {
+@media only screen and (max-width: 599px) {
   .positive-quotes-container {
     .positive-quote {
       line-height: 28px;
+    }
+  }
+}
+
+@media only screen and (max-width: 799px) {
+  .positive-quotes-container {
+    .positive-quote {
+      line-height: 35px;
+    }
+  }
+}
+
+@media only screen and (min-width: 800px) and (max-width: 899px) {
+  .positive-quotes-container {
+    .positive-quote {
+      line-height: 46px;
     }
   }
 }
