Fixed styling issues on the home page

--- a/src/Components/TestimonialsSection/TestimonialsSection2.scss
+++ b/src/Components/TestimonialsSection/TestimonialsSection2.scss
@@ -30,7 +30,7 @@
   //   z-index: 5;
   // }
   .slider {
-    top: 275rem;
+    padding: 40rem 0;
     height: 450px;
     display: flex;
     position: absolute;
