--- a/src/Views/SchedulePage/SchedulePage.scss
+++ b/src/Views/SchedulePage/SchedulePage.scss
@@ -20,11 +20,11 @@
   }
 
   .calendar {
-    padding: 15rem 10rem 0;
+    padding: 15rem 10rem;
     text-align: center;
-    min-height: 100%;
-    height: 100%;
-    min-width: 100%;
+    // min-height: 100%;
+    // height: 100%;
+    // min-width: 100%;
     flex-direction: column;
     display: flex;
     justify-content: center;
